--- a/html-assignment/style.css
+++ b/html-assignment/style.css
@@ -7,7 +7,7 @@ body{
 /* styling of the header and footer*/
 
 header,footer{
-    background-color: aqua;
+    background-color: blue;
     color: white;
     text-align:center;
     padding: 10px 0;
