--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -37,7 +37,7 @@
     padding: 0 ;
   }
   
-  /* HEADER SECTION */
+  /* Header */
   header {
     background-color: #222;
     color: white;
@@ -45,7 +45,7 @@
     text-align: center;
   }
   
-  /* LOGO */
+  /* logo section */
   .logo-container {
     background-color:  #c78c06;
     padding: 5px 0;
@@ -82,7 +82,7 @@
     text-decoration: none;
   }
   
-  /* SEARCH STYLE */
+  /* SEARCH section */
   .search-form {
     display:flex;
     justify-content: right;
